# ygodeck-java

./: CMakeLists.txt  README.md  build.gradle
jni/: CardSelector.c  DB.c  Deck.c  DeckSet.c  Example.cpp  Format.c  User.c  Utils.c  Utils.h
src/net/sectorsoftware/ygo/deck/: CardSelector.java  DB.java  Deck.java  DeckSet.java  Format.java  User.java
src/net/sectorsoftware/ygodeck/: Example.java
test/net/sectorsoftware/ygo/deck/: CardSelectorTest.java  DeckSetTest.java  DeckTest.java  FormatTest.java  UserTest.java
